--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     Good luck and Happy Coding!
 
     - The freeCodeCamp Team
-s
     -->
+    Hello world
     <script  src="js/index.js"></script>
   </body>
 </html>
