--- a/index.html
+++ b/index.html
@@ -20,7 +20,17 @@
 
     - The freeCodeCamp Team
     -->
-    Hello world
+    <div id="main">
+      <h1 id="title">Mr. Robert</h1>
+      <div id="img-div">
+        <img src="https://via.placeholder.com/350x150" id="image" alt="image">
+        <i id="img-caption"><b>Mr Robert</b></i>
+      </div>
+      <div id="tribute-info">
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur et ab eaque, iure quas maxime tempore reiciendis, dignissimos possimus ducimus, deserunt nemo exercitationem minima recusandae praesentium aliquid impedit. Dignissimos, nostrum!</p>
+        <a href="https://www.freecodecamp.org/learn/responsive-web-design/responsive-web-design-projects/build-a-tribute-page" id="tribute-link" target="_blank">Click here for more information</a>
+      </div>
+    </div>
     <script  src="js/index.js"></script>
   </body>
 </html>
